tests/test61.rael.exp
Error [1:9]: Invalid operation (+) on types
| log "2" + Void
|         ^
